<resources>
    <string name="app_name">Futsal Booked Apps</string>
    <string name="image">image</string>
    <string name="recover_pass">Forgot Your Password ? <b>Recover</b></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="username">Username</string>
    <string name="already_have_account_sign_in">Already have account ? <b>Sign In</b></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="location">Location</string>
    <string name="futsal_field">Futsal Field</string>
    <string name="number_phone">Number Phone</string>
    <string name="account">Account</string>
    <string name="todo">TODO</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="register_provider">Register Provider</string>
    <string name="field_name">Field Name</string>
    <string name="set_location">Set Location</string>
    <string name="upload_image">Upload Image</string>
    <string name="field_add">Field Add</string>
    <string name="minimum_down_payment">Minimum Down Payment</string>
    <string name="add">Add</string>
    <string name="field_type">Field Type</string>
    <string name="grass">Grass</string>
    <string name="update_provider_data">Update Provider Data</string>
    <string name="update">Update</string>
    <string name="update_field">Update Field</string>
    <string name="rating_5_0">Rating 5.0</string>
    <string name="total_field_0">Total field : 0</string>
    <string name="booked_now">Booked Now</string>
    <string name="futsaloka">Futsaloka</string>
    <string name="field">Field</string>
    <string name="preview_location">Preview Location</string>
    <string name="rp_50_000">Rp. 50.000</string>
    <string name="minimum_dp">Minimum DP</string>
    <string name="my_booked">My Booked</string>
    <string name="booked_field">Booked Field</string>
    <string name="provider_field">Provider Field</string>
    <string name="status_dp_not_yet_paid">Status DP : Not yet paid</string>
    <string name="bank_acc_number">Bank Acc Number</string>
    <string name="manage_field_booked">Manage Field Booked</string>
    <string name="user_booked">User Booked</string>
    <string name="contact_user">Contact User</string>
    <string name="set_status">Set Status</string>
    <string name="user_contact">User Contact</string>
    <string name="confirmation_paid">Confirmation Paid</string>
    <string name="cancel_booked">Cancel Booked</string>
    <string name="contact_provider">Contact Provider</string>
    <string name="gift_a_review">Gift A Review</string>
    <string name="comment">Comment</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="review_user">Review user</string>
    <string name="_5_0">5.0</string>
    <string name="review_field">Review Field</string>
    <string name="waiting_paid">Waiting Paid</string>
    <string name="canceled">Canceled</string>
    <string name="filter_status">Filter Status</string>
    <string name="dp_payment_in_full">DP Payment In Full</string>
    <string name="booked_finish">Booked Finish</string>
    <string name="adhitya">Adhitya</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="mau_main_dimana">Mau Main Dimana ?</string>
    <string name="lapangan_terpopuler">Lapangan Terpopuler</string>
    <string name="rp_550_000_jam">Rp. 550.000 / Jam</string>
    <string name="jalan_gatot_subroto_nomor_68_777_2">Jalan Gatot Subroto nomor 68, 777 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_field">Price Field</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="upload_gambar">Upload Gambar</string>
    <string name="tambah">Tambah</string>
    <string name="filter_lapangan">Filter Lapangan</string>
    <string name="sort">Sort</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
</resources>