<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_status"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:padding="12dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <Button
            android:id="@+id/waiting_paid_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waiting_paid"
            android:fontFamily="@font/poppins_medium"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"/>

        <Button
            android:id="@+id/cancelled_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/canceled"
            android:fontFamily="@font/poppins_medium"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/dp_pay_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dp_payment_in_full"
        android:fontFamily="@font/poppins_medium"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/dp_paid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DP Paid"
        android:fontFamily="@font/poppins_medium"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/booked_finish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/booked_finish"
        android:fontFamily="@font/poppins_medium"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"/>




</LinearLayout>