<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/default_profile"
            android:contentDescription="@string/image"
            android:layout_weight="0"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/username_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/comment_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/review_user"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/rate_star_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_0"
            android:drawablePadding="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            app:drawableStartCompat="@drawable/ic_star_rate" />

    </LinearLayout>

</androidx.cardview.widget.CardView>