<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:padding="12dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ascending_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            app:cornerRadius="32dp"
            android:text="@string/ascending"
            android:textColor="@color/primary_dark"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_medium"
            app:strokeColor="@color/primary_dark"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/descending_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            app:cornerRadius="32dp"
            android:text="@string/descending"
            android:textColor="@color/primary_dark"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_medium"
            app:strokeColor="@color/primary_dark"
            android:layout_weight="1"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

</LinearLayout>