<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.ProviderField.FieldAdd">

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:translationZ="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:background="@color/primary"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_arrow_back"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/image" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:text="@string/field_add"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/image_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_image_default"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/upload_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="3dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/upload_image"
            android:textAllCaps="false" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/field_type"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/type_field_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:maxLength="24"
                android:inputType="text"
                android:textSize="12sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/minimum_down_payment"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/min_down_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:maxLength="24"
                android:inputType="number"
                android:textSize="12sp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:contentInsetStart="0dp"
        tools:ignore="BottomAppBar">

        <Button
            android:id="@+id/add_field_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/add"
            android:textAllCaps="false" />

    </com.google.android.material.bottomappbar.BottomAppBar>

</RelativeLayout>