<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_contact"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semi_bold"
        android:textAlignment="center"
        android:padding="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12.5sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12.5sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12.5sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12.5sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12.5sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/phone_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12.5sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_whatsapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Whatsapp"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_medium"
        android:textSize="12.5sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"/>

</LinearLayout>